Update book list.

--- a/documentation-books.html
+++ b/documentation-books.html
@@ -89,24 +89,46 @@
 <div id="page-content">
 	
 	<div id="sidebar" class="sticky">
+		<h1>Documentation</h1>
+		<ul>
+			<li><a href="documentation.html#tutorial">OpenSCAD Tutorial</a></li>
+			<li><a href="documentation.html#user-manual">OpenSCAD User Manual</a></li>
+			<li><a href="documentation.html#language-reference">OpenSCAD Language Reference</a></li>
+			<li><a href="documentation.html#cheat-sheet">Code Cheat Sheet</a></li>
+		</ul>
 		<h1>Books</h1>
 		<ul>
-      <li><a href="#overview">Overview</a></li>
       <li><a href="#books-english">English</a></li>
 			<li><a href="#books-german">German / Deutsch</a></li>
-    </ul>    
+    </ul>
+    <h1>Other</h1>
+    <ul>
+      <li><a href="documentation-other.html#tutorials-blogs">Tutorials - Articles / Blogs</a></li>
+      <li><a href="documentation-other.html#tutorials-video">Tutorials - Video</a></li>
+    </ul>
 	</div>
 
   <article>
-    <section id="overview">
-      <h1>Overview</h1>
-    </section>
-
     <section id="books-english">
       <h1>English</h1>
       <p style="clear: both"><br></p>
       <p>
+        <img class="libimg" width="200" src="images/UnderstandingOpenSCAD.jpg" align="right">
         <h2>Understanding OpenSCAD</h2>
+        <p>
+          OpenSCAD is not like other CAD solutions and that is exactly what makes it so
+          flexible and easy to learn.
+        </p>
+        <p>
+          With this book, you will learn how easy it is to develop your own models from
+          scratch in OpenSCAD and then export them for 3D printing or other manufacturing
+          processes. Besides, I'll show you how you can import and process 2D and 3D models
+          from other CAD programs...
+        </p>
+        <p>
+          I will also show you how I approach a design and why I choose a solution for a
+          specific situation. This gives you a practical insight into working with OpenSCAD!
+        </p>
         <div class="book-data">
         <ul>
           <li>Author: Alicia Noors</li>
@@ -272,7 +294,24 @@
       </p>
       <p style="clear: both"><br></p>
       <p>
+        <img class="libimg" width="200" src="images/OpenSCADVerstehenUndRichtigAnwenden.jpg" align="right">
         <h2>OpenSCAD verstehen und richtig anwenden</h2>
+        <p>
+          OpenSCAD ist nicht wie andere CAD-Lösungen und genau das macht es so flexibel
+          und leicht zu erlernen.
+        </p>
+        <p>
+          Mit diesem Buch lernen Sie, wie einfach es ist, in OpenSCAD eigene Modelle
+          von Grund auf zu erstellen und diese dann für den 3D-Druck oder andere
+          Herstellungsverfahren zu exportieren. Darüber hinaus zeige ich Ihnen, wie
+          Sie mit anderen CAD-Lösungen zusammenarbeiten können und fertige 2D- und
+          3D-Modelle importieren und weiterverarbeiten...
+        </p>
+        <p>
+          Außerdem zeige ich Ihnen, wie ich an ein Design herangehe, und warum ich
+          einen bestimmten Lösungsansatz für eine bestimmte Situation wähle. So
+          erhalten Sie einen praxisnahen Einblick in die Arbeit mit OpenSCAD!
+        </p>
         <div class="book-data">
         <ul>
           <li>Autor: Alicia Noors</li>
