Switch donation button to point to OpenCollective.

--- a/community.html
+++ b/community.html
@@ -42,28 +42,9 @@
 	<div class="clear"></div>
 	<div id="logo" class="left"></div>
 	<div id="donate" class="right">
-        <div id="paypal" style="margin-bottom:5px;">
-          <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-            <input type="hidden" name="cmd" value="_s-xclick">
-            <input type="hidden" name="hosted_button_id" value="7ZQNEVE87X2KN">
-            <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" alt="Donate using PayPal">
-            <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-          </form>
-          </div>
-		<a class="FlattrButton" style="display:none;" rev="flattr" href="http://openscad.org"></a><br/>
-          <script src="assets/widget_coin/coin.js"></script>
-          <script>
-            CoinWidgetCom.go({
-	    wallet_address: "18Eakg4ZCjjfVajXGvyntLKsEJYvZuT49C"
-	    , currency: "bitcoin"
-	    , counter: "count"
-	    , alignment: "bl"
-	    , qrcode: true
-	    , auto_show: false
-	    , lbl_button: "Donate"
-	    , lbl_address: "Bitcoin Address:"
-            });
-          </script>
+    <a href="https://opencollective.com/openscad/donate" target="_blank">
+      <img src="https://opencollective.com/openscad/donate/button@2x.png?color=white" width="200" />
+    </a>
 	</div>
 	<div id="title" style="margin-top:35px; width:620px;">
 		<h1 class="title" style="position:relative;"><span class="green">Open</span>SCAD</h1>
@@ -127,7 +108,7 @@
                         <ul>
                           <li>We accept sponsorships as well as individual donations</li>
                           <li>For sponsorship opportunities, please contact <a href="mailto:info@openscad.org">info@openscad.org</a></li>
-                          <li>For donations, we have a <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=7ZQNEVE87X2KN">PayPal account</a>, a <a href="http://flattr.com/thing/121566/OpenSCAD-The-Programmers-Solid-3D-CAD-Modeller">Flattr account</a> and a Bitcoin address: 18Eakg4ZCjjfVajXGvyntLKsEJYvZuT49C</li>
+                          <li>For donations, we have an <a href="https://opencollective.com/openscad/donate">Open Collective account</a></li>
                           <li>It's also possible to place bounties on individual issues using <a href="https://www.bountysource.com/#trackers/52063-openscad">BountySource</a></li>
                           <li>..or show your appreciation by <a href="http://www.amazon.ca/registry/wishlist/2N4WTGGFKT3IS">buying me a gift</a></li>
                         </ul>
