--- a/documentation.html
+++ b/documentation.html
@@ -41,28 +41,9 @@
 	<div class="clear"></div>
 	<div id="logo" class="left"></div>
 	<div id="donate" class="right">
-        <div id="paypal" style="margin-bottom:5px;">
-          <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-            <input type="hidden" name="cmd" value="_s-xclick">
-            <input type="hidden" name="hosted_button_id" value="7ZQNEVE87X2KN">
-            <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" alt="Donate using PayPal">
-            <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-          </form>
-          </div>
-		<a class="FlattrButton" style="display:none;" rev="flattr" href="http://openscad.org"></a><br/>
-          <script src="assets/widget_coin/coin.js"></script>
-          <script>
-            CoinWidgetCom.go({
-	    wallet_address: "18Eakg4ZCjjfVajXGvyntLKsEJYvZuT49C"
-	    , currency: "bitcoin"
-	    , counter: "count"
-	    , alignment: "bl"
-	    , qrcode: true
-	    , auto_show: false
-	    , lbl_button: "Donate"
-	    , lbl_address: "Bitcoin Address:"
-            });
-          </script>
+    <a href="https://opencollective.com/openscad/donate" target="_blank">
+      <img src="https://opencollective.com/openscad/donate/button@2x.png?color=white" width="200" />
+    </a>
 	</div>
 	<div id="title" style="margin-top:35px; width:620px;">
 		<h1 class="title" style="position:relative;"><span class="green">Open</span>SCAD</h1>
