Update community page.

--- a/community.html
+++ b/community.html
@@ -75,9 +75,8 @@
 		<ul>
 <!--			<li><a href="#user-manual">Code Examples</a></li>-->
 <li><a href="#get-involved">Get Involved</a></li>
-<li><a href="#mailing-list">Mailing List</a></li>
+<li><a href="#forum">Forum / Mailing List</a></li>
 <li><a href="#irc">IRC Channel</a></li>
-<li><a href="#forum">Forum</a></li>
 <li><a href="#other">Other</a></li>
 <li><a href="http://twitter.com/openscad"><i class="fab fa-twitter"></i></a></li>
 		</ul>
@@ -85,11 +84,32 @@
 	
 	<article>
 
-		<section id="get-involved">
+    <section-area style="width: 100%;">
+      <div class="link-grid">
+        <div class="link-button">
+          <h1><a href="https://webchat.freenode.net/#openscad">Chat</a></h1>
+          <small>Chat with developers and users on freenode</small>
+        </div>
+        <div class="link-button">
+          <h1><a href="http://forum.openscad.org/">Forum</a></h1>
+          <small>Join the community on the Forum / Mailing list</small>
+        </div>
+        <div class="link-button">
+          <h1><a href="https://github.com/openscad/openscad/issues">Bug reports</a></h1>
+          <small>Report bugs and request features on github</small>
+        </div>
+        <div class="link-button">
+          <h1><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual">Documentation</a></h1>
+          <small>Read and edit documentation on Wikibooks</small>
+        </div>
+      </div>
+    </section-area>
+
+    <section id="get-involved">
 			<h1>Get Involved</h1>
 			<h2>Users</h2>
 			<ul>
-				<li>subscribe to the <a href="#mailing-list">mailing list</a> or <a href="#forum">forums</a> or join our <a href="#irc">IRC channel</a> and contribute to the user community by answering requests and take part in discussions</li>
+				<li>subscribe to the <a href="#forum">mailing list</a> or <a href="#forum">forums</a> or join our <a href="#irc">IRC channel</a> and contribute to the user community by answering requests and take part in discussions</li>
 				<li>Report bugs, improve or validate bug reports on the <a href="https://github.com/openscad/openscad/issues">github issue tracker</a></li>
 				<li>Improve the <a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual">documentation</a> (it's a wiki)</li>
 			</ul>
@@ -104,44 +124,40 @@
 				<li>Implement <a href="https://github.com/openscad/openscad/labels/Type%3A%20Enhancement">new features</a></li>
 				<li>Refactor or clean up code</li>
 			</ul>
-                        <h2>Donations</h2>
-                        <ul>
-                          <li>We accept sponsorships as well as individual donations</li>
-                          <li>For sponsorship opportunities, please contact <a href="mailto:info@openscad.org">info@openscad.org</a></li>
-                          <li>For donations, we have an <a href="https://opencollective.com/openscad/donate">Open Collective account</a></li>
-                          <li>It's also possible to place bounties on individual issues using <a href="https://www.bountysource.com/#trackers/52063-openscad">BountySource</a></li>
-                          <li>..or show your appreciation by <a href="http://www.amazon.ca/registry/wishlist/2N4WTGGFKT3IS">buying me a gift</a></li>
-                        </ul>
+      <h2>Donations</h2>
+      <ul>
+        <li>We accept sponsorships as well as individual donations</li>
+        <li>For sponsorship opportunities, please contact <a href="mailto:info@openscad.org">info@openscad.org</a></li>
+        <li>For donations, we have an <a href="https://opencollective.com/openscad/donate">Open Collective account</a></li>
+        <li>It's also possible to place bounties on individual issues using <a href="https://www.bountysource.com/#trackers/52063-openscad">BountySource</a></li>
+        <li>..or show your appreciation by <a href="http://www.amazon.ca/registry/wishlist/2N4WTGGFKT3IS">buying me a gift</a></li>
+      </ul>
 		</section>
 	
-		<section id="mailing-list">
-		  <h1>Mailing List</h1>
-                  <ul>
-                    <li><a href="http://lists.openscad.org/mailman/listinfo/discuss_lists.openscad.org">list info</a></li>
-                    <li><a href="http://lists.openscad.org/pipermail/discuss_lists.openscad.org/">archives</a></li>
-                  </ul>
-                  <br/>Note: The mailing list and <a href="#forum">forums</a> are bidirectionally connected.
+		<section id="forum">
+			<h1>Forum / Mailing List</h1>
+      <ul>
+        <li><a href="http://forum.openscad.org" target="_blank">Forum</a> (provided by Nabble)</li>
+        <li><a href="http://lists.openscad.org/mailman/listinfo/discuss_lists.openscad.org" target="_blank">Mailing list info</a></li>
+        <li><a href="http://lists.openscad.org/pipermail/discuss_lists.openscad.org/" target="_blank">Mailing list archives</a></li>
+      </ul>
+      <br/>Note: The mailing list and forums are bidirectionally connected.
 		</section>
 		
 		<section id="irc">
 			<h1>IRC Channel</h1>
-			<h2><a href="irc:openscad@irc.freenode.net" target="_blank">#openscad on irc.freenode.net</a></h2>
+      <ul>
+        <li>Join via the freenode <a href="https://webchat.freenode.net/#openscad">web chat</a></li>
+        <li>Connect with an IRC client to <a href="irc:openscad@irc.freenode.net" target="_blank">#openscad</a> on irc.freenode.net</li>
+      </ul>
 		</section>
 		
-		<section id="forum">
-			<h1>Forum</h1>
-			<h2><a href="http://forum.openscad.org" target="_blank">http://forum.openscad.org</a></h2>
-			<a id="nabblelink" href="http://forum.openscad.org/">OpenSCAD</a>
-			<script src="http://forum.openscad.org/embed/f1"></script>
-		</section>
-
 		<section id="other">
 			<h1>Other</h1>
-                        <p>
-                          <ul>
-                          <il><a href="http://www.thingiverse.com/groups/openscad">OpenSCAD Thingiverse group</a></li>
-                          </ul>
-                        </p>
+      <ul>
+        <li><a href="https://www.thingiverse.com/groups/openscad">OpenSCAD Thingiverse group</a></li>
+        <li><a href="https://www.reddit.com/r/openscad/">OpenSCAD subreddit</a></li>
+      </ul>
 		</section>
 
 	</article>
