Add book "OpenSCAD meistern".

--- a/documentation-books.html
+++ b/documentation-books.html
@@ -252,6 +252,41 @@
       <h1>German / Deutsch</h1>
       <p style="clear: both"><br></p>
       <p>
+        <img class="libimg" width="200" src="images/OpenSCADmeistern.png" align="right">
+        <h2>OpenSCAD meistern in 10 Projekten</h2>
+        <p>
+          OpenSCAD ist eine freie und quelloffene Software für die Erstellung dreidimensionaler
+          Geometrien. Im Gegensatz zu geläufigen CAD-Systemen wie etwa Fusion 360 oder SolidWorks
+          werden Geometrien in OpenSCAD durch eine rein textuelle Beschreibung definiert.
+          Hierdurch sind sämtliche Elemente einer Geometrie inhärent parametrisiert und können
+          auf einfache Weise angepasst werden. Diese hohe Flexibilität macht OpenSCAD daher
+          besonders geeignet für die Konstruktion technischer Systeme und Komponenten, etwa
+          im Kontext des 3D-Drucks.
+        </p>
+        <p>
+          Das Buch OpenSCAD meistern führt Sie zunächst in alle wichtigen Konzepte und Funktionsweisen
+          von OpenSCAD ein. Anschließend begleitet Sie das Buch Schritt für Schritt durch 10 ausgewählte
+          Projekte, die sich jeweils auf eine begrenzte Menge an Funktionen und Konzepten konzentrieren.
+          Nach diesen 10 Projekten werden Sie alle praktisch relevanten Funktionen von OpenSCAD kennen.
+          Der Vollständigkeit halber stellt ein abschließendes Kapitel noch die Funktionen kurz und
+          knapp vor, die in keinem der Projekte angesprochen wurden.
+        </p>
+        <div class="book-data">
+        <ul>
+          <li>Autor: Jochen Kerdels
+            &nbsp <a href="mailto:openscad-meistern@kerdels.de?subject=OpenSCAD meistern"><span class="far fa-envelope"></span></a>
+          </li>
+          <li>Herausgeber: Jochen Kerdels
+            &nbsp <a href="https://openscad-meistern.de/impressum/"><span class="fas fa-external-link-alt"</span></a>
+          </li>
+          <li>Datum: Februar 2021</li>
+        </ul>
+        </div>
+        <p>Online lesen: <a href="https://openscad-meistern.de/buch/introduction/">https://openscad-meistern.de/</a></p>
+        <p>Den Autor unterstützen per <a href="https://openscad-meistern.de/dank/dank/">Überweisung / Paypal</a></p>
+      </p>
+      <p style="clear: both"><br></p>
+      <p>
         <img class="libimg" width="200" src="images/TechnicalModellingWithOpenSCAD.de.jpg" align="right">
         <h2>Technisches Konstruieren mit OpenSCAD</h2>
         <div class="book-data">
