--- a/libraries.html
+++ b/libraries.html
@@ -142,6 +142,63 @@
         <li>License: GPL-3.0-only</li>
       </ul>
       <p style="clear: both"></p>
+
+      <img class="libimg" src="images/rcolyer_threads.gif" width="200" align="right">
+      <h2>OpenSCAD threads.scad module</h2>
+      <p>This is an efficient OpenSCAD threading library intended primarily to be used
+         as a component in other designs. It supports metric compatible internal and
+         external threads, auger threads, thread tapering, clearance holes, countersunk
+         holes, recessed holes, hex bolts, nuts, washers, Phillips tips, and long rods
+         which are extended with threaded joints. Whenever possible this complies with
+         metric standards for the defaults of parameters, while providing overrides for
+         many values.</p>
+      <ul>
+        <li><a href="https://github.com/rcolyer/threads-scad">Library</a></li>
+        <li><a href="https://github.com/rcolyer/threads-scad/blob/master/README.md">Documentation</a></li>
+        <li>License: CC0-1.0</li>
+      </ul>
+      <p style="clear: both"></p>
+
+      <img class="libimg" src="images/rcolyer_smooth_prim.gif" width="200" align="right">
+      <h2>OpenSCAD smooth primitives library</h2>
+      <p>This library is a collection of some smooth primitives, i.e. having specified
+        rounded edges, for use in other designs. It's not a comprehensive collection,
+        but a useful set.</p>
+      <ul>
+        <li><a href="https://github.com/rcolyer/smooth-prim">Library</a></li>
+        <li><a href="https://github.com/rcolyer/smooth-prim/blob/master/README.md">Documentation</a></li>
+        <li>License: CC0-1.0</li>
+      </ul>
+      <p style="clear: both"></p>
+
+      <img class="libimg" src="images/rcolyer_plot_function.gif" width="200" align="right">
+      <h2>OpenSCAD Function Plotting Library</h2>
+      <p>This is a general purpose function plotting library for OpenSCAD which will
+         render functions with Cartesian coordinates (x & y input, z output),
+         polar/cylindrical coordinates (r & angle input, z output), or axial coordinates
+         (z & angle input, r output). This library is sufficiently flexible that it can
+         be used for more than just plotting functions. As demonstrated in the included
+         demo files, this can efficiently render ordinary objects with surfaces defined
+         by mathematical functions.</p>
+      <ul>
+        <li><a href="https://github.com/rcolyer/plot-function">Library</a></li>
+        <li><a href="https://github.com/rcolyer/plot-function/blob/master/README.md">Documentation</a></li>
+        <li>License: CC0-1.0</li>
+      </ul>
+      <p style="clear: both"></p>
+
+      <img class="libimg" src="images/rcolyer_closepoints.gif" width="200" align="right">
+      <h2>OpenSCAD ClosePoints Library</h2>
+      <p>This is a general purpose OpenSCAD library for easily creating diverse shapes by
+        simply creating lists of points which trace out layers in an outline of the desired
+        shape. The library consists of modules for creating polyhedrons from these lists of
+        points, as well as functions to assist in specifying the points using transformations.</p>
+      <ul>
+        <li><a href="https://github.com/rcolyer/closepoints">Library</a></li>
+        <li><a href="https://github.com/rcolyer/closepoints/blob/master/README.md">Documentation</a></li>
+        <li>License: CC0-1.0</li>
+      </ul>
+      <p style="clear: both"></p>
     </section>
 
   </article>
