--- a/documentation-books.html
+++ b/documentation-books.html
@@ -70,24 +70,30 @@
 <div id="page-content">
 	
 	<div id="sidebar" class="sticky">
-		<h1>Documentation</h1>
+		<h1><a href="documentation.html">Documentation</a></h1>
 		<ul>
 			<li><a href="documentation.html#tutorial">OpenSCAD Tutorial</a></li>
 			<li><a href="documentation.html#user-manual">OpenSCAD User Manual</a></li>
 			<li><a href="documentation.html#language-reference">OpenSCAD Language Reference</a></li>
 			<li><a href="documentation.html#cheat-sheet">Code Cheat Sheet</a></li>
 		</ul>
-		<h1>Books</h1>
-		<ul>
-      <li><a href="#books-english">English</a></li>
-			<li><a href="#books-german">German / Deutsch</a></li>
-    </ul>
-    <h1>Other</h1>
+    <h1><a href="documentation-books.html">Books</a></h1>
     <ul>
-      <li><a href="documentation-other.html#tutorials-blogs">Tutorials - Articles / Blogs</a></li>
-      <li><a href="documentation-other.html#tutorials-video">Tutorials - Video</a></li>
+      <li><a href="documentation-books.html#books-english">English</a></li>
+			<li><a href="documentation-books.html#books-german">German / Deutsch</a></li>
     </ul>
-	</div>
+    <h1><a href="documentation-videos.html">Videos</a></h1>
+    <ul>
+      <li><a href="documentation-videos.html#introduction">OpenSCAD: Introduction</a></li>
+    </ul>
+    <h1><a href="documentation-articles.html">Articles / Blogs</a></h1>
+    <ul>
+      <li><a href="documentation-articles.html#how-to-use-openscad">How to use OpenSCAD</a></li>
+      <li><a href="documentation-articles.html#3d-spielplatz">3D Spielplatz (german)</a></li>
+      <li><a href="documentation-articles.html#makerbot-blog">OpenSCAD Tutorial Series</a></li>
+      <li><a href="documentation-articles.html#edutechwiki">Tutorial at EduTechWiki</a></li>
+    </ul>
+  </div>
 
   <article>
     <section id="books-english">
