Add youtube links.

--- a/documentation-books.html
+++ b/documentation-books.html
@@ -137,6 +137,7 @@
           <li>Author: Tam Hanna
             &nbsp <a href="https://twitter.com/tamhanna"><span class="fab fa-twitter"></span></a>
             &nbsp <a href="https://www.instagram.com/tam.hanna/"><span class="fab fa-instagram"></span></a>
+            &nbsp <a href="https://www.youtube.com/user/MrTamhan"><span class="fab fa-youtube"></span></a>
           </li>
           <li>Publisher: Elektor
             &nbsp <a href="https://www.elektor.com/"><span class="fas fa-external-link-alt"</span></a>
@@ -145,6 +146,7 @@
           <li>ISBN: 978-1-90-792099-8</li>
         </ul>
         </div>
+        <p>Watch the video review by the Autor on <a href="https://www.youtube.com/watch?v=qvQ8qlLgEc0">YouTube</a></p>
         <p>Buy directly from the Author:
           <a href="https://www.elektor.com/technical-modeling-with-openscad">Book</a> /
           <a href="https://www.elektor.com/technical-modeling-with-openscad-e-book">PDF</a>
@@ -300,6 +302,7 @@
           <li>Autor: Tam Hanna
             &nbsp <a href="https://twitter.com/tamhanna"><span class="fab fa-twitter"></span></a>
             &nbsp <a href="https://www.instagram.com/tam.hanna/"><span class="fab fa-instagram"></span></a>
+            &nbsp <a href="https://www.youtube.com/user/MrTamhan"><span class="fab fa-youtube"></span></a>
           </li>
           <li>Herausgeber: Elektor
             &nbsp <a href="https://www.elektor.de/"><span class="fas fa-external-link-alt"</span></a>
@@ -308,6 +311,7 @@
           <li>ISBN: 978-3-89-576396-0</li>
         </ul>
         </div>
+        <p>Der Autor präsentiert das Buch bei <a href="https://www.youtube.com/watch?v=qvQ8qlLgEc0">YouTube</a> (auf Englisch)</p>
         <p>Direkt vom Autor kaufen:
           <a href="https://www.elektor.de/technisches-konstruieren-mit-openscad">Buch</a> /
           <a href="https://www.elektor.de/technisches-konstruieren-mit-openscad-pdf">PDF</a>
