Add book "Mastering OpenSCAD".

--- a/documentation-books.html
+++ b/documentation-books.html
@@ -100,6 +100,41 @@
       <h1>English</h1>
       <p style="clear: both"><br></p>
       <p>
+        <img class="libimg" width="200" src="images/MasteringOpenSCAD.png" align="right">
+        <h2>Mastering OpenSCAD within 10 projects</h2>
+        <p>
+          OpenSCAD is a free open source software for the creation of three-dimensional
+          geometries. In contrast to common CAD systems such as Fusion 360 or SolidWorks,
+          geometries in OpenSCAD are defined by a purely textual description. This means
+          that all elements of a geometry are inherently parameterized and can be easily
+          adapted. This high flexibility makes OpenSCAD particularly suitable for the
+          design of technical systems and and their components, for example in the context
+          of 3D printing.
+        </p>
+        <p>
+          The book Mastering OpenSCAD introduces you to all the important concepts and
+          functionalities of OpenSCAD. The book guides you through 10 selected projects
+          step by step, each project focusing on a limited set of functions and concepts.
+          After these 10 projects, you will know all the practically relevant features
+          of OpenSCAD. For the sake of completeness, a final chapter briefly presents
+          the functions that were not addressed in any of the projects.
+        </p>
+        <div class="book-data">
+        <ul>
+          <li>Author: Jochen Kerdels
+            &nbsp <a href="mailto:openscad-meistern@kerdels.de?subject=Mastering OpenSCAD"><span class="far fa-envelope"></span></a>
+          </li>
+          <li>Publisher: Jochen Kerdels
+            &nbsp <a href="https://mastering-openscad.eu/impressum/"><span class="fas fa-external-link-alt"</span></a>
+          </li>
+          <li>Date: March 2021</li>
+        </ul>
+        </div>
+        <p>Read lesen: <a href="https://mastering-openscad.eu/buch/introduction/">https://mastering-openscad.eu/</a></p>
+        <p>Support the author: <a href="https://mastering-openscad.eu/dank/dank/">Bank transfer / Paypal</a></p>
+      </p>
+      <p style="clear: both"><br></p>
+      <p>
         <img class="libimg" width="200" src="images/UnderstandingOpenSCAD.jpg" align="right">
         <h2>Understanding OpenSCAD</h2>
         <p>
