--- a/documentation-books.html
+++ b/documentation-books.html
@@ -130,7 +130,7 @@
           <li>Date: March 2021</li>
         </ul>
         </div>
-        <p>Read lesen: <a href="https://mastering-openscad.eu/buch/introduction/">https://mastering-openscad.eu/</a></p>
+        <p>Read online: <a href="https://mastering-openscad.eu/buch/introduction/">https://mastering-openscad.eu/</a></p>
         <p>Support the author: <a href="https://mastering-openscad.eu/dank/dank/">Bank transfer / Paypal</a></p>
       </p>
       <p style="clear: both"><br></p>
