Add note about new book.

--- a/index.html
+++ b/index.html
@@ -87,6 +87,14 @@
 	
 	<article>
 
+    <section-area style="width: 100%; text-align: center; background-color: #e5f1d3; border: 1px solid #f9d72c;">
+      <p>
+        Free online book published:
+        <a href="https://mastering-openscad.eu/">Mastering OpenSCAD</a> (english) /
+        <a href="https://openscad-meistern.de/">OpenSCAD meistern</a> (deutsch)
+      </p>
+    </section-area>
+
     <section>
 			<h1><strong><span class="green">Open</span>SCAD</strong> is software for creating solid 3D CAD objects.</h1>
 			<h1 class="normal">It is free software and available for Linux/UNIX, MS Windows and Mac OS X.</h1>
