Add links to Paperback (german) version.

--- a/documentation-books.html
+++ b/documentation-books.html
@@ -319,14 +319,19 @@
           <li>Autor: Jochen Kerdels
             &nbsp <a href="mailto:openscad-meistern@kerdels.de?subject=OpenSCAD meistern"><span class="far fa-envelope"></span></a>
           </li>
-          <li>Herausgeber: Jochen Kerdels
+          <li>Herausgeber: Jochen Kerdels (Online)
             &nbsp <a href="https://openscad-meistern.de/impressum/"><span class="fas fa-external-link-alt"</span></a>
           </li>
+          <li>Herausgeber: Books on Demand (Paperback)
+            &nbsp <a href="https://www.bod.de/"><span class="fas fa-external-link-alt"</span></a>
           <li>Datum: Februar 2021</li>
+          <li>ISBN: 978-3-75-344195-5</li>
         </ul>
         </div>
         <p>Online lesen: <a href="https://openscad-meistern.de/buch/introduction/">https://openscad-meistern.de/</a></p>
         <p>Den Autor unterstützen per <a href="https://openscad-meistern.de/dank/dank/">Überweisung / Paypal</a></p>
+        <p>Bestellen bei <a href="https://www.bod.de/buchshop/openscad-meistern-jochen-kerdels-9783753441955">Books on Demand</a></p>
+        <p>Bestellen bei <a href="https://www.amazon.de/OpenSCAD-meistern-Projekten-Jochen-Kerdels/dp/3753441953/">Amazon</a></p>
       </p>
       <p style="clear: both"><br></p>
       <p>
