Add GSoC 2021 news.

--- a/index.html
+++ b/index.html
@@ -88,11 +88,7 @@
 	<article>
 
     <section-area style="width: 100%; text-align: center; background-color: #e5f1d3; border: 1px solid #f9d72c;">
-      <p>
-        Free online book published:
-        <a href="https://mastering-openscad.eu/">Mastering OpenSCAD</a> (english) /
-        <a href="https://openscad-meistern.de/">OpenSCAD meistern</a> (deutsch)
-      </p>
+      <p>OpenSCAD accepted to <a href="news.html#20210312">Google Summer of Code 2021</a></p>
     </section-area>
 
     <section>
