Update mailing list links.

--- a/community.html
+++ b/community.html
@@ -137,8 +137,8 @@
 			<h1>Forum / Mailing List</h1>
       <ul>
         <li><a href="http://forum.openscad.org" target="_blank">Forum</a> (provided by Nabble)</li>
-        <li><a href="http://lists.openscad.org/mailman/listinfo/discuss_lists.openscad.org" target="_blank">Mailing list info</a></li>
-        <li><a href="http://lists.openscad.org/pipermail/discuss_lists.openscad.org/" target="_blank">Mailing list archives</a></li>
+        <li><a href="https://lists.openscad.org/list/discuss.lists.openscad.org" target="_blank">Mailing list info</a></li>
+        <li><a href="https://lists.openscad.org/empathy/list/discuss.lists.openscad.org" target="_blank">Mailing list archives</a></li>
       </ul>
       <br/>Note: The mailing list and forums are bidirectionally connected.
 		</section>
