Add video "OpenSCAD: Primitive Solids".

--- a/documentation-videos.html
+++ b/documentation-videos.html
@@ -102,7 +102,12 @@
         <iframe class="img-container" src="https://www.youtube.com/embed/dzzFOU_Ggrs" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <p class="text-container">
           <h2 id="introduction"><a href="https://www.youtube.com/watch?v=dzzFOU_Ggrs">OpenSCAD: Introduction</a></h2>
-          <small>by <a href="https://www.youtube.com/channel/UCyfkvd1vofv6wApZLA32_6g">cilynx</a>, Feb 28, 2021</small>
+          <small>by <a href="https://www.youtube.com/channel/UCyfkvd1vofv6wApZLA32_6g">cilynx</a></small>
+
+          <ul>
+          <li><a href="https://www.youtube.com/watch?v=dzzFOU_Ggrs">Introduction</a></li>
+          <li><a href="https://www.youtube.com/watch?v=P_DhtzPczbI">Primitive Solids</a></li>
+          </ul>
         </p>
       </div>
 
